syntax = "proto3";

option csharp_namespace= "PetShop.GRPC";

package auth;

service Authentication{
	rpc Authenticate(AuthenticationRequest) returns (AuthenticationResponse);
}

message AuthenticationRequest{
	string username = 1;
	string password = 2;
}

message AuthenticationResponse {
	string AccessToken = 1;
	int32 ExpiresIn = 2;
}